<resources>
    <string name="app_name">EthernetApp</string>
    <string name="empty">Немає збережених паролів</string>

    <string name="inputPassword">Password</string>
    <string name="inputName">Username</string>
    <string name="inputEmail">Email</string>
    <string name="registration">Registration</string>
    <string name="registrButton">Зареєструватися</string>
    <string name="or">або</string>
    <string name="loginButton">Ввійти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>