<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    tools:context=".authorization.Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="62dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/custom_item_background"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/current_regular"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:text="@string/registration"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/registerLayout"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="75dp"
                android:background="@drawable/custom_item_background"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <AutoCompleteTextView
                        android:id="@+id/editTextTextPersonName2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/custom_item_background_black2"
                        android:fontFamily="arial"
                        android:hint="@string/inputName"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorHint"
                        android:textSize="18sp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp">

                    <AutoCompleteTextView
                        android:id="@+id/editTextTextPersonName4"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/custom_item_background_black2"
                        android:fontFamily="arial"
                        android:hint="@string/inputEmail"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorHint"
                        android:textSize="18sp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/editTextTextPersonName5"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/custom_item_background_black2"
                        android:fontFamily="arial"
                        android:hint="@string/inputPassword"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorHint"
                        android:textSize="18sp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    app:srcCompat="@drawable/custom_item_background_black" />

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:foreground="?android:selectableItemBackground"
                    android:background="@drawable/custom_item_background_black"
                    android:text="@string/registrButton"
                    android:textColor="@color/colorWhite"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorHint"
                    android:textAlignment="center"
                    android:text="@string/or" />

                <Button
                    android:id="@+id/button_to_login"
                    android:layout_width="320dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:foreground="?android:selectableItemBackground"
                    android:background="@drawable/custom_item_background"
                    android:text="@string/loginButton"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>